// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`epics/status should set isLoading property 1`] = `
Object {
  "getVenuesSearchAsync": Object {
    "hasError": false,
    "isLoading": true,
  },
}
`;

exports[`epics/status should set isLoading property 2`] = `
Object {
  "getVenuesSearchAsync": Object {
    "hasError": true,
    "isLoading": false,
  },
}
`;

exports[`epics/status should set isLoading property 3`] = `
Object {
  "getVenuesSearchAsync": Object {
    "hasError": false,
    "isLoading": false,
  },
}
`;

exports[`epics/status should set isLoading property 4`] = `
Object {
  "getVenuesSearchAsync": Object {
    "hasError": false,
    "isLoading": false,
  },
}
`;
